<resources>
    <string name="app_name">To Do List</string>
    <string name="msg_no_internet">Please check your internet connectivity</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_category">Category</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="new_task">Task title</string>
    <string name="new_category">New Category</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="task_description">Description…</string>
    <string name="alert_category_empty">Category name should not be empty!</string>
    <string name="alert_task_title_empty">Task title should not be empty!</string>


    <string name="empty_task_description">Set task description…</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="delete_category">Delete Category</string>
    <string name="delete_category_desc">Are you sure you want to delete this category?</string>

    <string name="delete_task">Delete Task</string>
    <string name="delete_sub_task">Delete Sub Task</string>
    <string name="delete_task_desc">Are you sure you want to delete this task?</string>

    <string name="theme">Theme</string>
    <string name="display">Display</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme_system_default">System Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <string name="positive_button">OK</string>
    <string name="negative_button">CANCEL</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="set_time">Set time</string>
    <string name="repeat">Repeat</string>
    <string name="time_format_am">%d:%d AM</string>
    <string name="time_format_pm">%d:%d PM</string>
    <string name="add_date_or_time">Add date/time</string>
    <string name="add_sub_tasks">Add sub tasks</string>
    <string name="enter_title">Enter title</string>
</resources>