<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.makeover.todolist.view.dashboard.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_navigation_category_to_taskFragment"
            app:destination="@id/task_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.makeover.todolist.view.dashboard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.makeover.todolist.view.dashboard.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/task_fragment"
        android:name="com.makeover.todolist.view.dashboard.ui.task.TaskFragment"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="category_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_task_fragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/taskDetailsFragment"
        android:name="com.makeover.todolist.view.dashboard.ui.taskdetails.TaskDetailsFragment"
        android:label="fragment_task_details"
        tools:layout="@layout/fragment_task_details" >
        <argument
            android:name="task_id"
            app:argType="integer" />
    </fragment>
</navigation>